--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "seed:regions": "ts-node ./src/seeder/regions/seeder.ts",
-    "seed:questions": "ts-node ./src/seeder/questions/seeder.ts"
+    "seed:questions": "ts-node ./src/seeder/questions/seeder.ts",
+    "seed:question-assignments": "ts-node ./src/seeder/question-assignments/seeder.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
