--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"],
   "compilerOptions": {
     "module": "commonjs",
@@ -22,7 +23,8 @@
     "typeRoots": ["node_modules/@types"],
     "paths": {
       "@modules/*": ["modules/*"],
-      "@common/*": ["common/*"]
+      "@common/*": ["common/*"],
+      "@app/*": ["*"]
     }
   }
 }
