--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "seed:regional-question-cycle": "ts-node -r tsconfig-paths/register ./src/seeder/regional-question-cycle/seeder.ts"
   },
   "dependencies": {
+    "@nestjs/bullmq": "^10.2.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
@@ -34,6 +35,7 @@
     "@nestjs/swagger": "^7.4.2",
     "@prisma/client": "^5.20.0",
     "bcryptjs": "^2.4.3",
+    "bullmq": "^5.13.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "passport-jwt": "^4.0.1",
