--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "seed:regional-question-cycle": "ts-node -r tsconfig-paths/register ./src/seeder/regional-question-cycle/seeder.ts"
   },
   "dependencies": {
+    "@bull-board/api": "^5.23.0",
+    "@bull-board/nestjs": "^5.23.0",
     "@nestjs/bullmq": "^10.2.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
